--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "1.0.0",
   "main": "tailwind.config.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "any-promise": "^1.3.0",
     "anymatch": "^3.1.3",
     "arg": "^5.0.2",
