change title on package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "tailwindcss": "^3.3.6"
   },
-  "name": "tailwindcourse",
+  "name": "tailwindHomework",
   "version": "1.0.0",
   "main": "tailwind.config.js",
   "dependencies": {
